--- a/notesAppStyles.css
+++ b/notesAppStyles.css
@@ -1,9 +1,3 @@
-.center-login {
-    margin: auto;
-    width: 30%;
-    padding: 10px;
-  }
-
 body {
     background-image: url("https://img2.pngio.com/detective-png-transparent-detective-png-image-free-download-pngkey-detective-notepad-png-300_310.png");
     
@@ -12,7 +6,6 @@ body {
 h1.main-sig {
     color: rgb(255, 255, 255);
     text-shadow: 0 0 3px #000000, 0 0 10px #000000;
-    
   }
 
 .m-fadeOut {
@@ -29,8 +22,8 @@ h1.main-sig {
  
 #signature {
     position: absolute;
-    top: 100%;
-    right: 2%;
+    top: 50%;
+    right: 50%;
   }
 
 .signature-text {
@@ -38,7 +31,7 @@ h1.main-sig {
   }
 
 #sig {
-    font-size: 50px;
+    font-size: 150px;
   }
 
 
@@ -65,4 +58,14 @@ p {
     font-family: cursive;
     background-color: white;
   }
-  
+
+form {
+  position: absolute;
+  top: 25%;
+  left: 1%;
+}
+
+label {
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 3px #000000, 0 0 10px #000000;
+}
