finally sorted out the create functionality

--- a/notesAppStyles.css
+++ b/notesAppStyles.css
@@ -1,5 +1,5 @@
 /* body {
-    background-image: url(https://lh3.googleusercontent.com/proxy/fMZ7FZeM4GiHhx0ynz00cmjdYiviAwpV2dHlqTVLIMfPU3e_YqPbDxelCDDNRZgbFYVDN_K14BJ7kQC1sIn3aILDEEcKAlwaJDyyKA);
+    background-image: ;
    
   } */
 
